--- a/assets/css/intro/styles.css
+++ b/assets/css/intro/styles.css
@@ -18,9 +18,19 @@ body {
     border: 2px solid limegreen;
     box-sizing: border-box;
     white-space: pre-wrap;
-    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
-    height: 60vh; /* Limita a altura do terminal para uma melhor experiência */
-    position: relative; /* Para posicionar o cursor absolutamente */
+    overflow-y: auto;
+    height: 60vh;
+    position: relative;
+}
+
+.terminal::before {
+    content: 'root@TmX001:';
+    display: block;
+    color: white;
+    font-weight: bold;
+    border-top: 4px solid limegreen;
+    padding-top: 10px;
+    margin-bottom: 10px;
 }
 
 #output, #input-line {
@@ -30,15 +40,15 @@ body {
 
 #input-line {
     margin-top: -50px;
-    margin-right: 685px; /* Alteração: adiciona margem à direita do prompt */
+    margin-right: 0; /* Alteração: ajusta a margem direita do input-line */
     position: relative;
-    display: flex; /* Alteração: torna o conteúdo do input-line em linha */
-    align-items: center; /* Alteração: centraliza verticalmente os itens */
+    display: flex;
+    align-items: center;
 }
 
 .prompt {
     color: limegreen;
-    margin-right: 5px; /* Alteração: adiciona margem à direita do prompt */
+    margin-right: 5px;
 }
 
 #input {
@@ -51,7 +61,7 @@ body {
 
 .cursor {
     position: absolute;
-    left: calc(100% - 40px); /* Alteração: ajusta a posição do cursor */
+    left: calc(100% - 20px); /* Ajuste na posição do cursor */
     top: 0;
     height: 100%;
     width: 2px;
