--- a/assets/css/intro/styles.css
+++ b/assets/css/intro/styles.css
@@ -53,6 +53,20 @@ body {
     color: limegreen;
     margin-left: 15px;
 }
+footer {
+            background-color: #f0f0f0; /* Cinza claro */
+            padding: 10px;
+            text-align: center;
+            font-size: 12px; /* Tamanho pequeno */
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer a {
+            color: #333; /* Cor do texto cinza escuro */
+            text-decoration: none;
+        }
 
 .cursor {
     position: absolute;
