--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,12 +12,12 @@ body {
     color: rgb(255, 255, 255);
 }
 footer {
-            background-color: #f1f1f1; /* Cor de fundo cinza */
+            background-color: black; /* Cor de fundo cinza */
             padding: 10px; /* Espaçamento interno */
             text-align: center; /* Centraliza o texto */
         }
  footer p {
-            font-size: 6px; /* Tamanho da fonte */
+            font-size: 8px; /* Tamanho da fonte */
             color: #666; /* Cor do texto cinza */
         }
 
