--- a/assets/css/intro/styles.css
+++ b/assets/css/intro/styles.css
@@ -14,6 +14,8 @@ body {
 
     width: 90%;
     max-width: 800px;
+    height: 50%;
+    max-height: 300px;
     padding: 20px;
     background-color: black;
     border-top: 30px solid limegreen;
